<resources>
    <string name="app_name">LocMess</string>
    <string name="drawer_open">Drawer open (placeholder)</string>
    <string name="drawer_close">Drawer closed (placeholder)</string>
    <string name="remove">Remove</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="key">Key</string>
    <string name="value">Value</string>
    <string name="name">Name:</string>
    <string name="attributes">Attributes:</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Log in</string>
    <string name="sign_up">Sign up</string>
    <string name="reentry_password">Reentry password</string>
    <string name="witheList">White List</string>
    <string name="blackList">Black List</string>
    <string name="message">Message</string>
    <string name="location">Location</string>
    <string name="hintInsertMessage">Insert Message</string>
    <string name="from">From:</string>
    <string name="to">To:</string>
    <string name="filters">Filters:</string>
    <string name="postMessage">Post Message</string>
    <string name="gps">GPS</string>
    <string name="wifi">WiFi ID</string>
    <string name="icon">icon</string>
    <string name="latitude">Latitude (º):</string>
    <string name="longitude">Longitude (º):</string>
    <string name="radius">Radius (m):</string>
    <string name="use_my_location">Use my location</string>
    <string name="choose_from_map">Choose from map</string>
    <string name="create">Create</string>
    <string name="send">Send</string>
    <string name="centralized">Centralized</string>
    <string name="adOc">Ad-hoc</string>
    <string name="distribution">Distribution</string>
    <string name="error_pass_not_equal">The inserted passwords dont mach!!</string>
    <string name="empty_user">The username cant be empty!!</string>
    <string name="empty_pass">The password cant be empty!!</string>
    <string name="no_internet">Couldn\'t connect to the server</string>
    <string name="user_already_exists">User already exists</string>
    <string name="wrong_credentials">Username or Password incorrect</string>
    <string name="waiting_for_server">Waiting for Server</string>
    <string name="sending_message">Sending message</string>
    <string name="error_server">Error communicating to server</string>
    <string name="invalid_fields_gps">Some fields could not be processed. Make sure they are all filled with valid values</string>
    <string name="no_nearby_wifis">There are no nearby wifis</string>
    <string name="select_one_gps_wifi">Please select one of GPS or WIFI IDs</string>
    <string name="coordinates">Coordinates:</string>
    <string name="no_internet_connection_bar_Tex">No Internet Connection. Try again later</string>
    <string name="notification_content">New messages are available at your location.</string>
    <string name="notification_title">New message</string>
    <string name="notification_ticker">New messages available</string>
    <string name="title_activity_maps">Map</string>
    <string name="maximum_number_of_mule_messages">Maximum number of mule messages:</string>
    <string name="gps_network_not_enabled">Gps is not enabled. Would you like to enable it?</string>
    <string name="open_location_settings">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="no_location_recv_post_msg">No locations to select. Please create one first.</string>
    <string name="dup_msg_error">The given message was duplicated.</string>
</resources>
