<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/latitude_bundle" >

        <TextView
            android:text="@string/latitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/latitude_text" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:id="@+id/latitude"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/longitude_bundle" >

        <TextView
            android:text="@string/longitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/longitude_text" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:id="@+id/longitude"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/radius_bundle" >

        <TextView
            android:text="@string/radius"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radius_text" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:id="@+id/radius"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:text="@string/use_my_location"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/button3"
            android:layout_weight="1"
            style="@style/Widget.AppCompat.Button" />

        <Button
            android:text="@string/choose_from_map"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/button2"
            android:layout_weight="1"
            style="@style/Widget.AppCompat.Button" />
    </LinearLayout>

</LinearLayout>