<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_profile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="pt.ulisboa.tecnico.locmess.ProfileActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:orientation="vertical"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:layout_marginBottom="8dp"
            android:fontFamily="sans-serif-condensed"
            android:focusable="true"
            android:focusableInTouchMode="true"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Goncalo Rodrigues"
            android:textSize="16sp"
            android:layout_marginBottom="16dp"
            android:id="@+id/profile_name_tv"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/attributes"
            android:layout_marginBottom="8dp"
            android:fontFamily="sans-serif-condensed"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="8dp"
>
            <AutoCompleteTextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:maxLines="1"
                android:id="@+id/profile_new_key_autotv"
                android:completionThreshold="1"
                android:hint="@string/key"
                />

            <EditText
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:maxLines="1"
                android:id="@+id/profile_new_value_tv"
                android:hint="@string/value"/>

            <ImageButton
                android:layout_width="30dp"
                android:layout_height="match_parent"
                android:src="@drawable/ic_add_black"
                style="@style/Base.Widget.AppCompat.Button.Borderless"
                android:id="@+id/profile_add_keyval_bt"
                android:background="?android:selectableItemBackground"
                />

        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/profile_key_value_list">

        </android.support.v7.widget.RecyclerView>

    </LinearLayout>

    <include layout="@layout/drawer_layout" />
</android.support.v4.widget.DrawerLayout>
